--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
         align-items: center;
         text-align: center;
         padding: 20px;
-        color: white;
-        text-shadow: 0 0 10px rgba(0,0,0,0.7);
+        color: black;
     }
 
     h1 {
@@ -81,7 +80,7 @@
 
     a {
         font-size: 1.4rem;
-        color: white;
+        color: black;
         text-decoration: none;
         margin: 8px;
     }
