--- a/index.html
+++ b/index.html
@@ -1,121 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>haomiiya</title>
-
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
-
-    body, html {
-        height: 100%;
-        overflow: hidden;
-        font-family: Arial, sans-serif;
-    }
-
-    /* SLIDESHOW BACKGROUND */
-    .slideshow {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: -1;
-        overflow: hidden;
-    }
-
-    .slide {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background-size: cover;
-        background-position: center;
-        opacity: 0;
-        animation: fade 12s infinite;
-    }
-
-    /* First slide */
-    .slide:nth-child(1) {
-        background-image: url("page1.jpg");
-        animation-delay: 0s;
-    }
-
-    /* Second slide */
-    .slide:nth-child(2) {
-        background-image: url("page2.jpg");
-        animation-delay: 6s;
-    }
-
-    /* Fade animation */
-    @keyframes fade {
-        0% { opacity: 0; }
-        10% { opacity: 1; }
-        45% { opacity: 1; }
-        55% { opacity: 0; }
-        100% { opacity: 0; }
-    }
-
-    /* CENTERED CONTENT */
-    .content {
-        position: relative;
-        height: 100vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        padding: 20px;
-        color: black;
-    }
-
-    h1 {
-        font-size: 3rem;
-        margin-bottom: 20px;
-    }
-
-    a {
-        font-size: 1.4rem;
-        color: black;
-        text-decoration: none;
-        margin: 8px;
-    }
-
-    a:hover {
-        text-decoration: underline;
-    }
-
-    @media (max-width: 600px) {
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>haomiiya</title>
+    <style>
+        body {
+            background: #ffffff;
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
         h1 {
-            font-size: 2.2rem;
+            font-size: 3rem;
+            margin-bottom: 30px;
         }
         a {
-            font-size: 1.2rem;
+            font-size: 0.5rem;
+            margin: 10px;
+            text-decoration: none;
+            color: #000;
         }
-    }
-</style>
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-
-<!-- BACKGROUND SLIDES -->
-<div class="slideshow">
-    <div class="slide"></div>
-    <div class="slide"></div>
-</div>
-
-<!-- FOREGROUND CONTENT -->
-<div class="content">
     <h1>haomiiya</h1>
 
     <a href="https://soundcloud.com/haomiiya" target="_blank">soundcloud</a>
-    <a href="https://baihui.live/shows/antigen-w-haomiiya-23-09-19/en/" target="_blank">baihui radio</a>
+    <a href="https://baihui.live/shows/antigen-w-haomiiya-23-09-19/en/" target="_blank">baihui</a>
     <a href="https://www.visla.fm/program/haomiya-host" target="_blank">visla fm</a>
-
-</div>
-
 </body>
 </html>
