--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h1>haomiiya</h1>
 
     <a href="https://soundcloud.com/haomiiya" target="_blank">soundcloud</a>
-    <a href="https://baihui.live/shows/antigen-w-haomiiya-23-09-19/en/" target="_blank">baihui</a>
+    <a href="https://baihui.live/shows/antigen-w-haomiiya-23-09-19/en/" target="_blank">baihui radio</a>
     <a href="https://www.visla.fm/program/haomiya-host" target="_blank">visla fm</a>
 </body>
 </html>
