--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>haomiiya</title>
+    <title></title>
     <style>
         body {
             background: #ffffff;
@@ -15,7 +15,7 @@
             height: 100vh;
             margin: 0;
         }
-        .title-image {
+        .title-image {<img src="images/title.png">
             max-width: 80%;
             height: auto;
             margin-bottom: 30px;
