--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>haomiiya</title>
     <style>
         body {
             background: #ffffff;
@@ -15,10 +15,11 @@
             height: 100vh;
             margin: 0;
         }
-        .title-image {<img src="images/title.png">
+        /* Title image styling */
+        .title-image {
             max-width: 80%;
             height: auto;
-            margin-bottom: 30px;
+            margin-bottom: 30px; /* space between image and links */
         }
         a {
             font-size: 0.5rem;
@@ -32,7 +33,7 @@
     </style>
 </head>
 <body>
-    <!-- Replace this with your image file path -->
+    <!-- Image replaces the text title completely -->
     <img src="images/title.png" alt="haomiiya" class="title-image">
 
     <a href="https://soundcloud.com/haomiiya" target="_blank">soundcloud</a>
