--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
     </style>
 </head>
 <body>
-    <!-- Image replaces the text title completely -->
-    <img src="images/title.png" alt="haomiiya" class="title-image">
+    <!-- Image as the title -->
+    <img src="title.png" alt="haomiiya" class="title-image">
 
+    <!-- Your links -->
     <a href="https://soundcloud.com/haomiiya" target="_blank">soundcloud</a>
     <a href="https://baihui.live/shows/antigen-w-haomiiya-23-09-19/en/" target="_blank">baihui radio</a>
     <a href="https://www.visla.fm/program/haomiya-host" target="_blank">visla fm</a>
